# thingy53_BT_services

./: .gitignore  CMakeLists.txt  README.md  prj.conf  thingy53_nrf5340_cpuapp_ns.overlay
boards/: thingy53_nrf5340_cpuapp.conf
src/: BH1749NUC_colorsens_service.c  BH1749NUC_colorsens_service.h  adxl362_service.c  adxl362_service.h  bme68x_service.c  bme68x_service.h  bmi270_service.c  bmi270_service.h  bmm150_service.c  bmm150_service.h  debug_service.c  debug_service.h  main (Copy).c  main.c
